improved few things in dashboard

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="card-body">
                         <input type="file" class="form-control mb-2" id="csvFile" accept=".csv">
-                        <small class="text-muted d-block mb-2">Format: date, usage</small>
+                        <small class="text-muted d-block mb-2">Format: date, usage (YYYY-MM-DD, kWh). Example: 2025-10-26, 12.5</small>
                         <button class="btn btn-secondary w-100" onclick="uploadCSV()">Upload CSV</button>
                     </div>
                 </div>
